Refactor API, and add Event
